Separate anki css

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         --canvas: #2c2c2c;
       }
     </style>
+    <link rel="stylesheet" href="/reviewer.css" />
+    <link rel="stylesheet" href="/webview.css" />
   </head>
 
   <body class="isLin nightMode night_mode reduce-motion fancy">
