Reduce bundle size

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </style>
     <link rel="stylesheet" href="/reviewer.css" />
     <link rel="stylesheet" href="/webview.css" />
+    <link rel="stylesheet" href="/src/tailwind.css" />
   </head>
 
   <body class="isLin nightMode night_mode reduce-motion fancy">
