--- a/src/front.html
+++ b/src/front.html
@@ -1,95 +1,38 @@
-<script type="text/html" data-field="FreqSort">
-  {{FreqSort}}
-</script>
-
-<script type="text/html" data-field="Frequency">
-  {{Frequency}}
-</script>
-
-<script type="text/html" data-field="Expression">
-  {{Expression}}
-</script>
-
-<script type="text/html" data-field="ExpressionFurigana">
-  {{ExpressionFurigana}}
-</script>
-<script type="text/html" data-field="furigana:ExpressionFurigana">
-  {{furigana:ExpressionFurigana}}
-</script>
-<script type="text/html" data-field="kana:ExpressionFurigana">
-  {{kana:ExpressionFurigana}}
-</script>
-
-<script type="text/html" data-field="ExpressionReading">
-  {{ExpressionReading}}
-</script>
-
-<script type="text/html" data-field="PitchPosition">
-  {{PitchPosition}}
-</script>
-
-<script type="text/html" data-field="ExpressionAudio">
-  {{ExpressionAudio}}
-</script>
-<script type="text/html" data-field="SentenceAudio">
-  {{SentenceAudio}}
-</script>
-
-<script type="text/html" data-field="Picture">
-  {{Picture}}
-</script>
-
-<!-- Sentence (raw) -->
-<script type="text/html" data-field="Sentence">
-  {{Sentence}}
-</script>
-
-<!-- Sentence furigana / kana variants -->
-<script type="text/html" data-field="SentenceFurigana">
-  {{SentenceFurigana}}
-</script>
-<script type="text/html" data-field="furigana:Sentence">
-  {{furigana:Sentence}}
-</script>
-<script type="text/html" data-field="furigana:SentenceFurigana">
-  {{furigana:SentenceFurigana}}
-</script>
-<script type="text/html" data-field="kana:SentenceFurigana">
-  {{kana:SentenceFurigana}}
-</script>
-
-<script type="text/html" data-field="DefinitionPicture">
-  {{DefinitionPicture}}
-</script>
-<script type="text/html" data-field="SelectionText">
-  {{SelectionText}}
-</script>
-<script type="text/html" data-field="MainDefinition">
-  {{MainDefinition}}
-</script>
-<script type="text/html" data-field="Glossary">
-  {{Glossary}}
-</script>
-<script type="text/html" data-field="MiscInfo">
-  {{MiscInfo}}
-</script>
-<script type="text/html" data-field="Tags">
-  {{Tags}}
-</script>
+<!-- biome-ignore format: this looks nicer -->
+<div style="display: none" id="anki-fields">
+<script type="text/html" data-field="FreqSort"> {{FreqSort}} </script>
+<script type="text/html" data-field="Frequency"> {{Frequency}} </script>
+<script type="text/html" data-field="Expression"> {{Expression}} </script>
+<script type="text/html" data-field="ExpressionFurigana"> {{ExpressionFurigana}} </script>
+<script type="text/html" data-field="furigana:ExpressionFurigana" > {{furigana:ExpressionFurigana}} </script>
+<script type="text/html" data-field="kana:ExpressionFurigana"> {{kana:ExpressionFurigana}} </script>
+<script type="text/html" data-field="ExpressionReading"> {{ExpressionReading}} </script>
+<script type="text/html" data-field="PitchPosition"> {{PitchPosition}} </script>
+<script type="text/html" data-field="ExpressionAudio"> {{ExpressionAudio}} </script>
+<script type="text/html" data-field="SentenceAudio"> {{SentenceAudio}} </script>
+<script type="text/html" data-field="Picture"> {{Picture}} </script>
+<script type="text/html" data-field="Sentence"> {{Sentence}} </script>
+<script type="text/html" data-field="SentenceFurigana"> {{SentenceFurigana}} </script>
+<script type="text/html" data-field="furigana:Sentence"> {{furigana:Sentence}} </script>
+<script type="text/html" data-field="furigana:SentenceFurigana"> {{furigana:SentenceFurigana}} </script>
+<script type="text/html" data-field="kana:SentenceFurigana"> {{kana:SentenceFurigana}} </script>
+<script type="text/html" data-field="DefinitionPicture"> {{DefinitionPicture}} </script>
+<script type="text/html" data-field="SelectionText"> {{SelectionText}} </script>
+<script type="text/html" data-field="MainDefinition"> {{MainDefinition}} </script>
+<script type="text/html" data-field="Glossary"> {{Glossary}} </script>
+<script type="text/html" data-field="MiscInfo"> {{MiscInfo}} </script>
+<script type="text/html" data-field="Tags"> {{Tags}} </script>
+</div>
 
 <div id="root"></div>
 
 <script type="module">
-  const fieldScripts = document.querySelectorAll('script[type="text/html"]');
-  const fields = Object.fromEntries(
-    Array.from(fieldScripts).map((el) => [
-      el.dataset.field,
-      el.innerHTML.trim(),
-    ]),
-  );
-  console.log(fields);
+import { init } from "./_kiku.js";
 
-  import { init } from "./_kiku.js";
-
-  init({ ankiFields: fields });
+const scripts = document.querySelectorAll("#anki-fields > script");
+const fields = Object.fromEntries(
+  Array.from(scripts).map((el) => [el.dataset.field, el.innerHTML.trim()]),
+);
+console.log(fields);
+init({ ankiFields: fields });
 </script>
