--- a/src/back.html
+++ b/src/back.html
@@ -1,39 +1,34 @@
 <!-- biome-ignore format: this looks nicer -->
 <div style="display: none" id="anki-fields">
-<script type="text/html" data-field="Expression"> {{Expression}} </script>
-<script type="text/html" data-field="ExpressionFurigana"> {{ExpressionFurigana}} </script>
-<script type="text/html" data-field="ExpressionReading"> {{ExpressionReading}} </script>
-<script type="text/html" data-field="ExpressionAudio"> {{ExpressionAudio}} </script>
-<script type="text/html" data-field="SelectionText"> {{SelectionText}} </script>
-<script type="text/html" data-field="MainDefinition"> {{MainDefinition}} </script>
-<script type="text/html" data-field="DefinitionPicture"> {{DefinitionPicture}} </script>
-<script type="text/html" data-field="Sentence"> {{Sentence}} </script>
-<script type="text/html" data-field="SentenceFurigana"> {{SentenceFurigana}} </script>
-<script type="text/html" data-field="SentenceAudio"> {{SentenceAudio}} </script>
-<script type="text/html" data-field="Picture"> {{Picture}} </script>
-<script type="text/html" data-field="Glossary"> {{Glossary}} </script>
-<script type="text/html" data-field="Hint"> {{Hint}} </script>
-<script type="text/html" data-field="IsWordAndSentenceCard"> {{IsWordAndSentenceCard}} </script>
-<script type="text/html" data-field="IsClickCard"> {{IsClickCard}} </script>
-<script type="text/html" data-field="IsSentenceCard"> {{IsSentenceCard}} </script>
-<script type="text/html" data-field="IsAudioCard"> {{IsAudioCard}} </script>
-<script type="text/html" data-field="PitchPosition"> {{PitchPosition}} </script>
-<script type="text/html" data-field="PitchCategories"> {{PitchCategories}} </script>
-<script type="text/html" data-field="Frequency"> {{Frequency}} </script>
-<script type="text/html" data-field="FreqSort"> {{FreqSort}} </script>
-<script type="text/html" data-field="MiscInfo"> {{MiscInfo}} </script>
-<script type="text/html" data-field="Tags"> {{Tags}} </script>
-<script type="text/html" data-field="furigana:ExpressionFurigana" > {{furigana:ExpressionFurigana}} </script>
-<script type="text/html" data-field="kana:ExpressionFurigana"> {{kana:ExpressionFurigana}} </script>
-<script type="text/html" data-field="furigana:Sentence"> {{furigana:Sentence}} </script>
-<script type="text/html" data-field="kanji:Sentence"> {{kanji:Sentence}} </script>
-<script type="text/html" data-field="furigana:SentenceFurigana"> {{furigana:SentenceFurigana}} </script>
-<script type="text/html" data-field="kana:SentenceFurigana"> {{kana:SentenceFurigana}} </script>
-</div>
-
-<!-- prefetch picture -->
-<div style="width: 0; height: 0; overflow: hidden;" id="prefetch-picture">
-  {{Picture}}
+<div data-field="Expression"> {{Expression}} </div>
+<div data-field="ExpressionFurigana"> {{ExpressionFurigana}} </div>
+<div data-field="ExpressionReading"> {{ExpressionReading}} </div>
+<div data-field="ExpressionAudio"> {{ExpressionAudio}} </div>
+<div data-field="SelectionText"> {{SelectionText}} </div>
+<div data-field="MainDefinition"> {{MainDefinition}} </div>
+<div data-field="DefinitionPicture"> {{DefinitionPicture}} </div>
+<div data-field="Sentence"> {{Sentence}} </div>
+<div data-field="SentenceFurigana"> {{SentenceFurigana}} </div>
+<div data-field="SentenceAudio"> {{SentenceAudio}} </div>
+<div data-field="Picture"> {{Picture}} </div>
+<div data-field="Glossary"> {{Glossary}} </div>
+<div data-field="Hint"> {{Hint}} </div>
+<div data-field="IsWordAndSentenceCard"> {{IsWordAndSentenceCard}} </div>
+<div data-field="IsClickCard"> {{IsClickCard}} </div>
+<div data-field="IsSentenceCard"> {{IsSentenceCard}} </div>
+<div data-field="IsAudioCard"> {{IsAudioCard}} </div>
+<div data-field="PitchPosition"> {{PitchPosition}} </div>
+<div data-field="PitchCategories"> {{PitchCategories}} </div>
+<div data-field="Frequency"> {{Frequency}} </div>
+<div data-field="FreqSort"> {{FreqSort}} </div>
+<div data-field="MiscInfo"> {{MiscInfo}} </div>
+<div data-field="Tags"> {{Tags}} </div>
+<div data-field="furigana:ExpressionFurigana" > {{furigana:ExpressionFurigana}} </div>
+<div data-field="kana:ExpressionFurigana"> {{kana:ExpressionFurigana}} </div>
+<div data-field="furigana:Sentence"> {{furigana:Sentence}} </div>
+<div data-field="kanji:Sentence"> {{kanji:Sentence}} </div>
+<div data-field="furigana:SentenceFurigana"> {{furigana:SentenceFurigana}} </div>
+<div data-field="kana:SentenceFurigana"> {{kana:SentenceFurigana}} </div>
 </div>
 
 <div id="root"></div>
@@ -41,7 +36,7 @@
 <script type="module">
 import { init } from "./_kiku.js";
 
-const scripts = document.querySelectorAll("#anki-fields > script");
+const scripts = document.querySelectorAll("#anki-fields > div");
 const fields = Object.fromEntries(
   Array.from(scripts).map((el) => [el.dataset.field, el.innerHTML.trim()]),
 );
