--- a/src/back.html
+++ b/src/back.html
@@ -32,7 +32,7 @@
 </div>
 
 <div id="root">
-  <template><div data-hk="000000000" class="max-w-4xl mx-auto overflow-auto px-2 sm:px-4 gutter-stable"><div class="flex flex-col gap-6" style="height:calc(100vh - 2em)"><div data-hk="000000001" class="flex justify-between flex-row h-5 min-h-5"></div><div data-hk="000000002" class="flex rounded-lg gap-4 sm:h-56 flex-col sm:flex-row "><div class="flex-1 bg-base-200 p-4 rounded-lg flex flex-col items-center justify-center"><div class="text-5xl sm:text-6xl"></div><div class="mt-6 flex gap-4 text-xl sm:text-2xl"></div><div class="flex gap-2 "></div></div><!--$--><!--/--></div><!--!$--></div></div></template>
+  <template style="display: none" ><div data-hk="0000000" class="max-w-4xl mx-auto overflow-auto px-2 sm:px-4 gutter-stable"><div class="flex flex-col gap-6 h-[calc(100vh-2em)] sm:h-[calc(100vh-4em)]"><div data-hk="0000001" class="flex justify-between flex-row h-5 min-h-5"></div><div data-hk="0000002" class="flex rounded-lg gap-4 sm:h-56 flex-col sm:flex-row "><div class="flex-1 bg-base-200 p-4 rounded-lg flex flex-col items-center justify-center"><div class="text-5xl sm:text-6xl"></div><div class="mt-6 flex gap-4 text-xl sm:text-2xl"></div><div class="flex gap-2 "></div></div><!--$--><!--/--></div><!--!$--></div></div></template>
 </div>
 
 <script>
