--- a/src/back.html
+++ b/src/back.html
@@ -31,8 +31,8 @@
 <div data-field="kana:SentenceFurigana">{{kana:SentenceFurigana}}</div>
 </div>
 
-<div id="root">
-  <template style="display: none" ><div data-hk="0000000" class="max-w-4xl mx-auto overflow-auto px-2 sm:px-4 gutter-stable"><div class="flex flex-col gap-6 h-[calc(100vh-2em)] sm:h-[calc(100vh-4em)]"><div data-hk="0000001" class="flex justify-between flex-row h-5 min-h-5"></div><div data-hk="0000002" class="flex rounded-lg gap-4 sm:h-56 flex-col sm:flex-row "><div class="flex-1 bg-base-200 p-4 rounded-lg flex flex-col items-center justify-center"><div class="text-5xl sm:text-6xl"></div><div class="mt-6 flex gap-4 text-xl sm:text-2xl"></div><div class="flex gap-2 "></div></div><!--$--><!--/--></div><!--!$--></div></div></template>
+<div id="root" data-theme="light">
+  <template style="display: none"><div data-hk="0000000" class="max-w-4xl mx-auto overflow-auto px-2 sm:px-4 gutter-stable"><div class="flex flex-col gap-6 h-[calc(100vh-2em)] sm:h-[calc(100vh-4em)]"><div data-hk="0000001" class="flex justify-between flex-row h-5 min-h-5"></div><div data-hk="0000002" class="flex rounded-lg gap-4 sm:h-56 flex-col sm:flex-row "><div class="flex-1 bg-base-200 p-4 rounded-lg flex flex-col items-center justify-center"><div class="text-5xl sm:text-6xl"></div><div class="mt-6 flex gap-4 text-xl sm:text-2xl"></div><div class="flex gap-2 "></div></div><div class="bg-base-200 rounded-lg relative overflow-hidden"><div class="[&amp;_img]:scale-110 [&amp;_img]:size-full [&amp;_img]:filter [&amp;_img]:object-cover [&amp;_img]:object-center [&amp;_img]:brightness-50 [&amp;_img]:absolute [&amp;_img]:blur-[16px] [&amp;_*]:contents">{{Picture}}</div><div class="relative h-full sm:[&_img]:h-full [&_img]:object-contain [&_img]:h-48 [&_img]:mx-auto [&_img]:transition-[filter] [&_img]:hover:filter-none cursor-pointer [&_*]:contents ">{{Picture}}</div></div></div><!--!$--></div></div></template>
 </div>
 
 <script>
