feat: more friendly config

--- a/src/back.html
+++ b/src/back.html
@@ -1,3 +1,108 @@
+<!-- 👇 Update your root dataset here 👇 -->
+<div
+id="root"
+data-kiku-root="true"
+data-theme="light"
+data-font-size-base-expression="text-5xl"
+data-font-size-base-pitch="text-xl"
+data-font-size-base-sentence="text-2xl"
+data-font-size-base-misc-info="text-sm"
+data-font-size-base-hint="text-lg"
+data-font-size-sm-expression="sm:text-6xl"
+data-font-size-sm-pitch="sm:text-2xl"
+data-font-size-sm-sentence="sm:text-4xl"
+data-font-size-sm-misc-info="sm:text-sm"
+data-font-size-sm-hint="sm:text-2xl"
+data-font-family="Noto Serif JP"
+>
+<!-- 👆 Update your root dataset here 👆 -->
+<!-- (￣人￣) Please do not modify anything below this line (-人-) -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!-- biome-ignore format: Do not modify anything if you don't know what you're doing Σ(°ロ°) -->
+  <!-- SSR_TEMPLATE -->
+</div>
+<!-- HYDRATION_SCRIPT -->
+
 <!-- biome-ignore format: this looks nicer -->
 <div style="display: none" id="anki-fields">
 <div data-field="Expression">{{Expression}}</div>
@@ -30,11 +135,6 @@
 <div data-field="furigana:SentenceFurigana">{{furigana:SentenceFurigana}}</div>
 <div data-field="kana:SentenceFurigana">{{kana:SentenceFurigana}}</div>
 </div>
-
-<div id="root" data-theme="light" data-font-family="Klee One">
-  <!-- SSR_TEMPLATE -->
-</div>
-<!-- HYDRATION_SCRIPT -->
 
 <script type="module">
 import { init } from "./_kiku.js";
