feat: prepare front ssr

--- a/src/back.html
+++ b/src/back.html
@@ -1,3 +1,4 @@
+<!-- biome-ignore format: $-->
 <!-- 👇 Update your root dataset here 👇 -->
 <div
 id="root"
@@ -98,8 +99,8 @@ data-font-family="Noto Serif JP"
 
 
 
-  <!-- biome-ignore format: Do not modify anything if you don't know what you're doing Σ(°ロ°) -->
-  <!-- SSR_TEMPLATE -->
+<!-- Do not modify anything if you don't know what you're doing Σ(°ロ°) -->
+<!-- SSR_TEMPLATE -->
 </div>
 <!-- HYDRATION_SCRIPT -->
 
