--- a/src/front.html
+++ b/src/front.html
@@ -1,3 +1,105 @@
+<!-- biome-ignore format: $-->
+<!-- 👇 Update your root dataset here 👇 -->
+<div
+id="root"
+data-kiku-root="true"
+data-theme="light"
+data-font-size-base-expression="text-5xl"
+data-font-size-base-pitch="text-xl"
+data-font-size-base-sentence="text-2xl"
+data-font-size-base-misc-info="text-sm"
+data-font-size-base-hint="text-lg"
+data-font-size-sm-expression="sm:text-6xl"
+data-font-size-sm-pitch="sm:text-2xl"
+data-font-size-sm-sentence="sm:text-4xl"
+data-font-size-sm-misc-info="sm:text-sm"
+data-font-size-sm-hint="sm:text-2xl"
+data-font-family="Noto Serif JP"
+>
+<!-- 👆 Update your root dataset here 👆 -->
+<!-- (￣人￣) Please do not modify anything below this line (-人-) -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- Do not modify anything if you don't know what you're doing Σ(°ロ°) -->
+<!-- SSR_TEMPLATE -->
+</div>
+<!-- HYDRATION_SCRIPT -->
+
 <!-- biome-ignore format: this looks nicer -->
 <div style="display: none" id="anki-fields">
 <div data-field="Expression">{{Expression}}</div>
@@ -17,10 +119,15 @@
 <div data-field="kanji:Sentence"> {{kanji:Sentence}} </div>
 </div>
 
-<div id="root"></div>
-
 <script type="module">
 import { init } from "./_kiku.js";
 
-init({ side: "front" });
+async function initAnki() {
+  const now = performance.now();
+  await init({ side: "front", ssr: true });
+  const delay = Math.round(performance.now() - now);
+  window.KIKU_STATE ??= {};
+  window.KIKU_STATE.initDelay = delay;
+}
+initAnki();
 </script>
