feat: add debug css variable

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
     :root[class*="night-mode"] {
       --canvas: #2c2c2c;
     }
+
+    :root {
+      --system-font: "Hiragino Mincho ProN";
+    }
     </style>
     <link rel="stylesheet" href="/reviewer.css">
     <link rel="stylesheet" href="/webview.css">
