feat: load css with link tag

--- a/src/back.html
+++ b/src/back.html
@@ -101,6 +101,13 @@ data-font-family="Noto Serif JP"
 <!-- SSR_TEMPLATE -->
 </div>
 
+<link ref="preload" href="_kiku_font_hina-mincho.woff2" as="font" type="font/woff2">
+<link ref="preload" href="_kiku_font_klee-one.woff2" as="font" type="font/woff2">
+<link ref="preload" href="_kiku_font_noto-sans-jp.woff2" as="font" type="font/woff2">
+<link ref="preload" href="_kiku_font_noto-serif-jp.woff2" as="font" type="font/woff2">
+<link ref="preload" href="_kiku_font_ibm-plex-sans-jp.woff2" as="font" type="font/woff2">
+<link rel="stylesheet" href="_kiku.css">
+
 <!-- biome-ignore format: this looks nicer -->
 <div style="display: none" id="anki-fields">
 <div data-field="Expression">{{Expression}}</div>
