refactor: update data set

--- a/src/back.html
+++ b/src/back.html
@@ -1,6 +1,9 @@
 <div
 data-kiku-root="true"
 data-theme="light"
+data-web-font="Klee One"
+data-system-font="'Hiragino Mincho ProN', 'Noto Serif CJK JP', 'Noto Serif JP', 'Yu Mincho', HanaMinA, HanaMinB, serif"
+data-anki-connect-port="8765"
 data-font-size-base-expression="text-5xl"
 data-font-size-base-pitch="text-xl"
 data-font-size-base-sentence="text-2xl"
@@ -11,7 +14,6 @@ data-font-size-sm-pitch="sm:text-2xl"
 data-font-size-sm-sentence="sm:text-4xl"
 data-font-size-sm-misc-info="sm:text-sm"
 data-font-size-sm-hint="sm:text-2xl"
-data-font-family='"Hiragino Mincho ProN", "Noto Serif CJK JP", "Noto Serif JP", "Yu Mincho", HanaMinA, HanaMinB, serif'
 >
 <!-- 👆 Update your root dataset here -->
 <!-- (￣人￣) Please do not modify anything below this line (-人-) -->
