--- a/src/front.html
+++ b/src/front.html
@@ -3,6 +3,7 @@ data-kiku-root="true"
 data-theme="light"
 data-web-font="Klee One"
 data-system-font="'Hiragino Mincho ProN', 'Noto Serif CJK JP', 'Noto Serif JP', 'Yu Mincho', HanaMinA, HanaMinB, serif"
+data-use-system-font="true"
 data-anki-connect-port="8765"
 data-font-size-base-expression="text-5xl"
 data-font-size-base-pitch="text-xl"
