feat: add link tag to be included by apkg export

--- a/packages/note/src/back.html
+++ b/packages/note/src/back.html
@@ -1,3 +1,4 @@
+<!-- biome-ignore format: $-->
 <div
 data-kiku-root="true"
 data-theme="light"
@@ -102,15 +103,29 @@ data-font-size-sm-hint="sm:text-2xl"
 
 
 
-<!-- biome-ignore format: $-->
 <!-- Do not modify anything if you don't know what you're doing Σ(°ロ°) -->
 <!-- SSR_TEMPLATE -->
 </div>
 
-<link ref="preload" href="_kiku_font_hina-mincho.woff2" as="font" type="font/woff2">
-<link ref="preload" href="_kiku_font_klee-one.woff2" as="font" type="font/woff2">
-<link ref="preload" href="_kiku_font_ibm-plex-sans-jp.woff2" as="font" type="font/woff2">
+<!-- biome-ignore format: $-->
+<div>
+<link ref="preload" href="_kiku_font_hina-mincho.woff2" as="font" type="font/woff2" >
+<link ref="preload" href="_kiku_font_klee-one.woff2" as="font" type="font/woff2" >
+<link ref="preload" href="_kiku_font_ibm-plex-sans-jp.woff2" as="font" type="font/woff2" >
 <link rel="stylesheet" href="_kiku.css">
+<link href="_kiku.js" data-anki-include>
+<link href="_kiku_libs.js" data-anki-include>
+<link href="_kiku_shared.js" data-anki-include>
+<link href="_kiku_lazy.js" data-anki-include>
+<link href="_kiku_worker.js" data-anki-include>
+<link href="_kiku_db_similar_kanji_from_keisei.json" data-anki-include>
+<link href="_kiku_db_similar_kanji_lookup.json" data-anki-include>
+<link href="_kiku_db_similar_kanji_manual.json" data-anki-include>
+<link href="_kiku_db_similar_kanji_old_script.json" data-anki-include>
+<link href="_kiku_db_similar_kanji_stroke_edit_dist.json" data-anki-include>
+<link href="_kiku_db_similar_kanji_wk_niai_noto.json" data-anki-include>
+<link href="_kiku_db_similar_kanji_yl_radical.json" data-anki-include>
+</div>
 
 <!-- biome-ignore format: this looks nicer -->
 <div style="display: none" id="anki-fields">
