feat: auto update template

--- a/packages/note/src/front.html
+++ b/packages/note/src/front.html
@@ -1,87 +1,109 @@
-<!-- biome-ignore format: $-->
+<!-- This file is auto-generated. Any manual changes will be lost on save.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+-->
+
+<!-- biome-ignore format: this looks nicer-->
 <div
 data-kiku-root="true"
-data-theme="light"
+data-theme="__DATA_THEME__"
 >
-<!-- 👆 Update your root dataset here-->
-<!-- (￣人￣) Please do not modify anything below this line (-人-) -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!-- Do not modify anything if you don't know what you're doing Σ(°ロ°) -->
 <!-- SSR_TEMPLATE -->
 </div>
