fix: mount root

--- a/packages/note/index.html
+++ b/packages/note/index.html
@@ -73,7 +73,7 @@
     <div id="_flag" hidden>&#x2691;</div>
 
     <div id="qa">
-      <div id="root">
+      <div id="root" data-kiku-root="true">
         <script src="/src/index.tsx" type="module"></script>
       </div>
     </div>
