feat: display more field on front

--- a/packages/note/src/front.html
+++ b/packages/note/src/front.html
@@ -145,7 +145,12 @@ data-theme="__DATA_THEME__"
 <div data-field="ExpressionAudio"></div>
 <div data-field="SentenceAudio"></div>
 {{/IsAudioCard}}
+<div data-field="Sentence">{{Sentence}}</div>
 <div data-field="kanji:Sentence"> {{kanji:Sentence}} </div>
+<div data-field="furigana:Sentence"> {{furigana:Sentence}} </div>
+<div data-field="SentenceFurigana"> {{SentenceFurigana}} </div>
+<div data-field="furigana:SentenceFurigana"> {{furigana:SentenceFurigana}} </div>
+<div data-field="kana:SentenceFurigana"> {{kana:SentenceFurigana}} </div>
 </div>
 
 <!-- HYDRATION_SCRIPT -->
