--- a/packages/note/src/back.html
+++ b/packages/note/src/back.html
@@ -119,13 +119,13 @@ data-theme="__DATA_THEME__"
 <link href="_kiku_shared.js" data-anki-include>
 <link href="_kiku_lazy.js" data-anki-include>
 <link href="_kiku_worker.js" data-anki-include>
-<link href="_kiku_db_similar_kanji_from_keisei.json" data-anki-include>
-<link href="_kiku_db_similar_kanji_lookup.json" data-anki-include>
-<link href="_kiku_db_similar_kanji_manual.json" data-anki-include>
-<link href="_kiku_db_similar_kanji_old_script.json" data-anki-include>
-<link href="_kiku_db_similar_kanji_stroke_edit_dist.json" data-anki-include>
-<link href="_kiku_db_similar_kanji_wk_niai_noto.json" data-anki-include>
-<link href="_kiku_db_similar_kanji_yl_radical.json" data-anki-include>
+<link href="_kiku_db_similar_kanji_from_keisei.json.gz" data-anki-include>
+<link href="_kiku_db_similar_kanji_lookup.json.gz" data-anki-include>
+<link href="_kiku_db_similar_kanji_manual.json.gz" data-anki-include>
+<link href="_kiku_db_similar_kanji_old_script.json.gz" data-anki-include>
+<link href="_kiku_db_similar_kanji_stroke_edit_dist.json.gz" data-anki-include>
+<link href="_kiku_db_similar_kanji_wk_niai_noto.json.gz" data-anki-include>
+<link href="_kiku_db_similar_kanji_yl_radical.json.gz" data-anki-include>
 </div>
 
 <!-- biome-ignore format: this looks nicer -->
