--- a/packages/note/src/front.html
+++ b/packages/note/src/front.html
@@ -119,6 +119,7 @@ data-theme="__DATA_THEME__"
 <link href="_kiku_shared.js" data-anki-include>
 <link href="_kiku_lazy.js" data-anki-include>
 <link href="_kiku_worker.js" data-anki-include>
+<link href="_kiku_plugin.js" data-anki-include>
 <link href="_kiku_db_similar_kanji_from_keisei.json.gz" data-anki-include>
 <link href="_kiku_db_similar_kanji_lookup.json.gz" data-anki-include>
 <link href="_kiku_db_similar_kanji_manual.json.gz" data-anki-include>
