--- a/packages/note/src/back.html
+++ b/packages/note/src/back.html
@@ -128,6 +128,9 @@ data-theme="__DATA_THEME__"
 <link href="_kiku_db_similar_kanji_stroke_edit_dist.json.gz" data-anki-include>
 <link href="_kiku_db_similar_kanji_wk_niai_noto.json.gz" data-anki-include>
 <link href="_kiku_db_similar_kanji_yl_radical.json.gz" data-anki-include>
+<link href="_kiku_back.html" data-anki-include>
+<link href="_kiku_front.html" data-anki-include>
+<link href="_kiku_style.css" data-anki-include>
 </div>
 
 <!-- biome-ignore format: this looks nicer -->
