--- a/packages/note/src/back.html
+++ b/packages/note/src/back.html
@@ -171,11 +171,5 @@ data-theme="__DATA_THEME__"
 <script type="module">
 import { init } from "./_kiku.js";
 
-async function initAnki() {
-  const now = performance.now();
-  await init({ side: "back", ssr: true });
-  window.KIKU_STATE ??= {};
-  window.KIKU_STATE.startupTime = performance.now() - now;
-}
-initAnki();
+init({ side: "back", ssr: true });
 </script>
