feat: blur nsfw toggle

--- a/packages/note/src/front.html
+++ b/packages/note/src/front.html
@@ -103,6 +103,7 @@ This file is auto-generated. Any manual changes will be lost on save.
 <div
 id="kiku-root"
 data-theme="__DATA_THEME__"
+data-blur-nsfw="__DATA_BLUR_NSFW__"
 >
 <!-- Do not modify anything if you don't know what you're doing Σ(°ロ°) -->
 <!-- SSR_TEMPLATE -->
