--- a/packages/note/src/back.html
+++ b/packages/note/src/back.html
@@ -105,6 +105,7 @@ This file is auto-generated. Any manual changes will be lost on save.
 id="kiku-root"
 data-theme="__DATA_THEME__"
 data-blur-nsfw="__DATA_BLUR_NSFW__"
+data-mod-vertical="__DATA_MOD_VERTICAL__"
 >
 <!-- Do not modify anything if you don't know what you're doing Σ(°ロ°) -->
 <!-- SSR_TEMPLATE -->
