feat: picture on front side

--- a/packages/note/src/back.html
+++ b/packages/note/src/back.html
@@ -103,6 +103,7 @@ This file is auto-generated. Any manual changes will be lost on save.
 <!-- biome-ignore format: this looks nicer-->
 <div
 id="kiku-root"
+data-side="back"
 data-theme="__DATA_THEME__"
 data-blur-nsfw="__DATA_BLUR_NSFW__"
 data-mod-vertical="__DATA_MOD_VERTICAL__"
