--- a/packages/note/src/front.html
+++ b/packages/note/src/front.html
@@ -102,6 +102,7 @@ This file is auto-generated. Any manual changes will be lost on save.
 <!-- biome-ignore format: this looks nicer-->
 <div
 id="kiku-root"
+data-side="front"
 data-theme="__DATA_THEME__"
 data-blur-nsfw="__DATA_BLUR_NSFW__"
 data-mod-vertical="__DATA_MOD_VERTICAL__"
@@ -152,6 +153,7 @@ data-mod-vertical="__DATA_MOD_VERTICAL__"
 <div data-field="SentenceAudio"></div>
 {{/IsAudioCard}}
 <div data-field="Sentence">{{Sentence}}</div>
+<div data-field="Tags">{{Tags}}</div>
 <div data-field="kanji:Sentence"> {{kanji:Sentence}} </div>
 <div data-field="furigana:Sentence"> {{furigana:Sentence}} </div>
 <div data-field="SentenceFurigana"> {{SentenceFurigana}} </div>
