feat: picture on front option

--- a/packages/note/src/front.html
+++ b/packages/note/src/front.html
@@ -105,6 +105,7 @@ id="kiku-root"
 data-side="front"
 data-theme="__DATA_THEME__"
 data-blur-nsfw="__DATA_BLUR_NSFW__"
+data-picture-on-front="__DATA_PICTURE_ON_FRONT__"
 data-mod-vertical="__DATA_MOD_VERTICAL__"
 >
 <!-- Do not modify anything if you don't know what you're doing Σ(°ロ°) -->
