feat: replace jpdb kanji with kiku main

--- a/packages/note/src/front.html
+++ b/packages/note/src/front.html
@@ -131,7 +131,7 @@ data-mod-vertical="__DATA_MOD_VERTICAL__"
 <link href="_kiku_db_similar_kanji_stroke_edit_dist.json.gz" data-anki-include>
 <link href="_kiku_db_similar_kanji_wk_niai_noto.json.gz" data-anki-include>
 <link href="_kiku_db_similar_kanji_yl_radical.json.gz" data-anki-include>
-<link href="_kiku_db_jpdb_kanji.json.gz" data-anki-include>
+<link href="_kiku_db_main_compact.json.gz" data-anki-include>
 <link href="_kiku_back.html" data-anki-include>
 <link href="_kiku_front.html" data-anki-include>
 <link href="_kiku_style.css" data-anki-include>
