feat: _kiku_plugin.css

--- a/packages/note/src/front.html
+++ b/packages/note/src/front.html
@@ -118,6 +118,7 @@ data-mod-vertical="__DATA_MOD_VERTICAL__"
 <link ref="preload" href="_kiku_font_klee-one.woff2" as="font" type="font/woff2" >
 <link ref="preload" href="_kiku_font_ibm-plex-sans-jp.woff2" as="font" type="font/woff2" >
 <link rel="stylesheet" href="_kiku.css" id="kiku-css">
+<link rel="stylesheet" href="_kiku_plugin.css" id="kiku-css-plugin">
 <link href="_kiku.js" data-anki-include>
 <link href="_kiku_libs.js" data-anki-include>
 <link href="_kiku_shared.js" data-anki-include>
