feat: add CardID

--- a/packages/note/src/back.html
+++ b/packages/note/src/back.html
@@ -158,6 +158,7 @@ data-mod-vertical="__DATA_MOD_VERTICAL__"
 <div data-field="FreqSort">{{FreqSort}}</div>
 <div data-field="MiscInfo">{{MiscInfo}}</div>
 <div data-field="Tags">{{Tags}}</div>
+<div data-field="CardID">{{CardID}}</div>
 <div data-field="furigana:ExpressionFurigana">{{furigana:ExpressionFurigana}}</div>
 <div data-field="kana:ExpressionFurigana">{{kana:ExpressionFurigana}}</div>
 <div data-field="furigana:Sentence">{{furigana:Sentence}}</div>
