--- a/packages/note/src/front.html
+++ b/packages/note/src/front.html
@@ -151,6 +151,7 @@ data-mod-vertical="__DATA_MOD_VERTICAL__"
 {{/IsAudioCard}}
 <div data-field="Sentence">{{Sentence}}</div>
 <div data-field="Tags">{{Tags}}</div>
+<div data-field="CardID">{{CardID}}</div>
 <div data-field="kanji:Sentence"> {{kanji:Sentence}} </div>
 <div data-field="furigana:Sentence"> {{furigana:Sentence}} </div>
 <div data-field="SentenceFurigana"> {{SentenceFurigana}} </div>
