feat: group misc info

--- a/packages/note/src/front.html
+++ b/packages/note/src/front.html
@@ -150,6 +150,7 @@ data-mod-vertical="__DATA_MOD_VERTICAL__"
 <div data-field="SentenceAudio"></div>
 {{/IsAudioCard}}
 <div data-field="Sentence">{{Sentence}}</div>
+<div data-field="MiscInfo">{{MiscInfo}}</div>
 <div data-field="Tags">{{Tags}}</div>
 <div data-field="CardID">{{CardID}}</div>
 <div data-field="kanji:Sentence"> {{kanji:Sentence}} </div>
